# elcairo

./: .gitignore  LICENSE  Pipfile  README.md  api_example.md  cinecli.py  elcairo.py  movie.py  pyproject.toml  python.code-workspace  setup.py
apis/: elcairo.py
cinecli/: main.py
cinecli/api/: elcairo.py
cinecli/apis/: elcairo.py
cinecli/commands/: database.py  elcairo.py  shows.py  version.py
cinecli/commands/lib/: database.py  database_utils.py  movie_printer.py  shows_functions.py
commands/: database.py  elcairo.py
commands/lib/: movie_printer.py
elcairo/: main.py  models.py
elcairo/api/: elcairo.py
elcairo/commands/: database.py  shows.py
elcairo/commands/lib/: database_functions.py  events_printer.py  movie_printer.py  shows_functions.py
scripts/: elcairo_notify
tests/utils/: ics.py
