[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "elcairo"
version = "1.7"
requires-python = ">=3.10"
dependencies = [
  "ics",
  "icalendar",
  "requests",
  "click",
  "beautifulsoup4",
  "arrow",
  "halo",
]

description = "Cli program that print movies available for watching in El Cario cinema."
authors = [{ name = "Pablo Saavedra", email = "pablosaavedra123@gmail.com" }]
maintainers = [
  { name = "Pablo Saavedra", email = "pablosaavedra123@gmail.com" },
]
readme = "README.md"

[project.urls]
Repository = "https://github.com/pablos123/elcairo"

[project.scripts]
elcairo = "elcairo.main:main"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # path lib
    "PTH",
]
[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 20
